--- a/Omnifood Project/index.html
+++ b/Omnifood Project/index.html
@@ -682,6 +682,58 @@
             <!-- Contact-Form Section-Block-Form End-->
         </section>
         <!-- Website Contact-Form Section-Block End-->
+        
+        <!-- Website Footer-Block Start-->
+        <footer>
+            <div class="row">
+                <!--Footer Left Navigation-Block Start-->
+                <div class="col span-1-of-2">
+                    <ul class="footer-nav">
+                        <li>
+                            <a href="#">About us</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Press</a>
+                        </li>
+                        <li>
+                            <a href="#">iOS App</a>
+                        </li>
+                        <li>
+                            <a href="#">Android App</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Footer Left Navigation-Block End-->
+                
+                <!--Footer Right Navigation-Block Start-->
+                <div class="col span-1-of-2">
+                    <ul class="social-links">
+                        <li>
+                            <a href="#"><i class="ion-social-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="ion-social-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="ion-social-googleplus"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="ion-social-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Footer Right Navigation-Block End-->
+            </div>
+            <div class="row">
+                <p>
+                    Copyright &copy; 2020 by Omnifood. All rights reserved.
+                </p>
+            </div>
+        </footer>
+        <!-- Website Footer-Block End-->
     </body>
     <!--HTML Body-Block End-->
 </html>
