--- a/Omnifood Project/index.html
+++ b/Omnifood Project/index.html
@@ -3,10 +3,12 @@
     <!--HTML Header Start-->
     <head>
         <!--Source Files Start-->
+        <meta name="viewport" content="width=device-length, initial-scale=1.0">
         <link rel = "stylesheet" type = "text/css" href="vendors/css/normalize.css">
         <link rel = "stylesheet" type = "text/css" href="vendors/css/grid.css">
         <link rel = "stylesheet" type = "text/css" href="vendors/css/ionicons.min.css">
         <link rel = "stylesheet" type = "text/css" href="resources/css/style.css">
+        <link rel = "stylesheet" type = "text/css" href="resources/css/queries.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
         <!--Source Files End-->
         
